# AITools

./: .gitignore  .history  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  __init__.py  add_method.py  check_lines.py  main.py  progress_cleaned.md  progress_with_taskstop.md  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py  test.py  test_163_api.py  test_alternative_methods.py  test_api_limit.py  test_bash_all_functions.py  test_eastmoney_api.py  test_eastmoney_detailed.py  test_final_fix.py  test_fix.py  test_fixed_function.py  test_improved_pagination.py  test_markdown_merge.py  test_pagination.py  test_quick.py  test_shell_bash.py  test_simple_eastmoney.py  test_sina_api.py  test_sina_api2.py  test_stock_fix_final.py  test_tencent_api.py  test_tencent_list.py
architect/: __init__.py  architect.py
base/: __init__.py
cli/: scroll_display.py  ui_helper.py
compress/: compress.py
database/: __init__.py  database.py
diagram/: __init__.py  diagram.py
docker/: __init__.py  docker.py
docs/: MODULE_STANDARD.md  UI_THEME_SPECIFICATION.md
file/: __init__.py  compare.py  delete.py  file_copy_tool.py  file_delete_tool.py  file_edit_tool.py  file_move_tool.py  file_read_tool.py  file_write_tool.py  glob_tool.py  grep.py  grep_tool.py  notebook_edit.py  read.py  replace.py  search.py  write.py
git/: __init__.py  git.py
interaction/: __init__.py  ask_user_question.py  ask_user_question_tool.py  brief.py  brief_tool.py  confirm_dialog_tool.py  enhanced_interaction.py  input_helper.py  interaction.py  notification_tool.py  repl_tool.py  send_message_tool.py
markdown/: __init__.py  markdown.py  markdown_base.py  markdown_extract.py  markdown_io.py  markdown_merge.py  markdown_parse.py  markdown_validation.py
memory/: __init__.py  memory_recall.py  memory_recall_complex.py
network/: __init__.py  download_tool.py  http_tool.py  list_mcp_resources_tool.py  network.py  network_diagnostic_tool.py  ping_tool.py  read_mcp_resource_tool.py  web_fetch.py  web_fetch_tool.py  web_search.py  web_search_tool.py
pdf/: __init__.py  pdf.py  pdf_basic.py  pdf_enhance.py  pdf_forms.py  pdf_images.py  pdf_security.py  pdf_utils.py
project_context/: __init__.py  project_context.py
sandbox/: __init__.py  debug_reader.py  echo_app.py  sandbox.py  test_app.py  test_e2e_v2.py  test_repl.py  test_win.py
shell/: __init__.py  bash.py  bash_tool.py  power_shell_tool.py
skill/: __init__.py  skill.py  skill_search_tool.py  skill_tool.py
stock/: __init__.py  example_usage.py  stock.md  stock.py
summary/: __init__.py  summary.py  template.py  test.json
system/: __init__.py  agent_tool.py  config.py  config_tool.py  ctx_inspect_tool.py  enter_plan_mode_tool.py  enter_worktree_tool.py  exit_plan_mode_tool.py  exit_worktree_tool.py  finish.py  monitor.py  monitor.py.backup  overflow_test_tool.py  sleep.py  sleep_tool.py  snip_tool.py  synthetic_output_tool.py  system_info_tool.py  task_create_tool.py  task_get_tool.py  task_list_tool.py  task_manager.py  task_output_tool.py  task_stop.py  task_stop_tool.py  task_update_tool.py  terminal_capture_tool.py  todo.py  todo_write_tool.py  tool_search_tool.py
test_plan/: test_bash.py  test_imports_all.py  (+2 more)
(+53 files in other folders)
