[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitools-framework"
version = "1.0.0"
description = "A modular AI tools framework for command-line interfaces and tool integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AITools Development Team", email = "aitools@example.com"}
]
maintainers = [
    {name = "AITools Development Team", email = "aitools@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pdfplumber>=0.9.0",
    "pypdf>=3.0.0",
    "reportlab>=4.0.0",
    "pdf2image>=1.16.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "sqlite-utils>=3.30.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]
web = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
]
pdf = []  # PDF dependencies are already included in required dependencies
data = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/haoa1/AITools"
BugTracker = "https://github.com/haoa1/AITools/issues"
Repository = "https://github.com/haoa1/AITools"
Documentation = "https://github.com/haoa1/AITools/wiki"

[project.scripts]
aitools = "main:main"

[tool.setuptools]
include-package-data = true
packages.find = {where = ["."]}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".venv",
    "env",
    "venv",
    "dist",
    "build",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true